--- a/K_Bridge/Views/Home/PostList.cshtml
+++ b/K_Bridge/Views/Home/PostList.cshtml
@@ -15,105 +15,111 @@
     </button>
 </div>
 <div id="filterFrame" class="p-2 bg-main-color-background rounded-3 border-color-layout">
-    <div class="d-flex justify-content-between mb-3 p-2 px-4">
-        <div class="flex-column">
-            <p class="fw-bold text-color-header fs-6">Lọc bài viết</p>
-            <div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="noAnswer">
-                    <label class="form-check-label" for="noAnswer">
-                        Chưa có câu trả lời nào
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="noView">
-                    <label class="form-check-label" for="noView">
-                        Chưa có lượt xem nào
-                    </label>
-                </div>
-            </div>
-        </div>
-        <div class="flex-column">
-            <p class="fw-bold text-color-header fs-6">Sắp xếp theo</p>
-            <div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="sortOrder" id="newest" checked>
-                    <label class="form-check-label" for="newest">
-                        Bài mới nhất
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="sortOrder" id="trending">
-                    <label class="form-check-label" for="trending">
-                        Đang xu hướng
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="sortOrder" id="mostHelpful">
-                    <label class="form-check-label" for="mostHelpful">
-                        Hữu ích nhất
-                    </label>
-                </div>
-            </div>
-        </div>
-        <div class="flex-column">
-            <p class="fw-bold text-color-header fs-6">Thời gian</p>
-            <div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="timeOrder" id="ascending" checked>
-                    <label class="form-check-label" for="ascending">
-                        Tăng dần
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="timeOrder" id="descending">
-                    <label class="form-check-label" for="descending">
-                        Giảm dần
-                    </label>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="d-flex justify-content-between mt-3 text-color-header">
-        <div>
-            <button id="filterButtonClose" class="btn">Huỷ</button>
-        </div>
-        <div>
-            <button class="btn btn-edit-profile">Lưu bộ lọc</button>
-            <button class="btn btn-account-edit ms-2">Áp dụng bộ lọc</button>
-        </div>
-    </div>
-</div>
+    <form id="filterForm">
 
-@foreach (var post in ViewBag.Posts)
-{
-    <div class="row mt-2" onclick="window.location.href='/Post/Details?post=@post.ID'">
-        <div class="col-2 d-flex flex-column justify-content-center">
-            <div class="newest-card-stat py-2">@(post.Replies?.Count ?? 0) Câu trả lời</div>
-            <div class="newest-card-stat py-2">@post.ViewCount Lượt xem</div>
+        <input type="hidden" name="topic" value="@ViewBag.TopicID">
+        <div class="d-flex justify-content-between mb-3 p-2 px-4">
+            <div class="flex-column">
+                <p class="fw-bold text-color-header fs-6">Lọc bài viết</p>
+                <div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="noAnswer" name="noAnswer" value="true">
+                        <label class="form-check-label" for="noAnswer">
+                            Chưa có câu trả lời nào
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="noView" name="noView" value="true">
+                        <label class="form-check-label" for="noView">
+                            Chưa có lượt xem nào
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="flex-column">
+                <p class="fw-bold text-color-header fs-6">Sắp xếp theo</p>
+                <div>
+                    @*                     <div class="form-check">
+                    <input class="form-check-input" type="radio" name="sortOrder" value="newest" id="newest" checked>
+                    <label class="form-check-label" for="newest">
+                    Bài mới nhất
+                    </label>
+                    </div>
+                    *@
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="sortOrder" id="trending" value="trending" checked>
+                        <label class="form-check-label" for="trending">
+                            Đang xu hướng
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="sortOrder" id="mostHelpful" value="mostHelpful">
+                        <label class="form-check-label" for="mostHelpful">
+                            Hữu ích nhất
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="flex-column">
+                <p class="fw-bold text-color-header fs-6">Thời gian</p>
+                <div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="timeOrder" id="ascending" value="ascending" checked>
+                        <label class="form-check-label" for="ascending">
+                            Giảm dần
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="timeOrder" id="descending" value="descending">
+                        <label class="form-check-label" for="descending">
+                            Tăng dần
+                        </label>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-10">
-            <div class="d-flex">
-                <div class="newest-card-title">@post.Title</div>
-                <div class="newest-card-tag px-3 mx-3"
-                     style="background: @GetForumColorHelper.GetForumBackgroundColor(post.Topic.Forum.ID);
+        <div class="d-flex justify-content-between mt-3 text-color-header">
+            <div>
+                <button id="filterButtonClose" type="button" class="btn">Huỷ</button>
+            </div>
+            <div>
+                <button type="reset" class="btn btn-edit-profile">Đặt lại</button>
+                <button type="submit" class="btn btn-account-edit ms-2">Áp dụng bộ lọc</button>
+            </div>
+        </div>
+    </form>
+</div>
+<div id="postsContainer">
+    @foreach (var post in ViewBag.Posts)
+    {
+        <div class="row mt-2" onclick="window.location.href='/Post/Details?post=@post.ID'">
+            <div class="col-2 d-flex flex-column justify-content-center">
+                <div class="newest-card-stat py-2">@(post.Replies?.Count ?? 0) Câu trả lời</div>
+                <div class="newest-card-stat py-2">@post.ViewCount Lượt xem</div>
+            </div>
+            <div class="col-10">
+                <div class="d-flex">
+                    <div class="newest-card-title">@post.Title</div>
+                    <div class="newest-card-tag px-3 mx-3"
+                         style="background: @GetForumColorHelper.GetForumBackgroundColor(post.Topic.Forum.ID);
                                         color:@GetForumColorHelper.GetForumColor(post.Topic.Forum.ID)">
-                    @post.Topic.Forum.TagName
+                        @post.Topic.Forum.TagName
+                    </div>
+                </div>
+                <div class="newest-card-des">
+                    <div class="reply-content">
+                        @Html.Raw(post.Content)
+                    </div>
+                </div>
+                <div class="d-flex justify-content-end mt-2">
+                    <img src="/img/avatar_default.png" class="rounded-circle" alt="Avatar" width="30" height="30">
+                    <div class="newest-card-username mx-2">@post.User.Username hỏi @GetTimeAgoHelper.GetTimeAgo(post.CreatedAt)</div>
                 </div>
             </div>
-            <div class="newest-card-des">
-                <div class="reply-content">
-                    @Html.Raw(post.Content)
-                </div>
-            </div>
-            <div class="d-flex justify-content-end mt-2">
-                <img src="/img/avatar_default.png" class="rounded-circle" alt="Avatar" width="30" height="30">
-                <div class="newest-card-username mx-2">@post.User.Username hỏi @GetTimeAgoHelper.GetTimeAgo(post.CreatedAt)</div>
-            </div>
+            <hr class="mt-2">
         </div>
-        <hr class="mt-2">
-    </div>
-}
+    }
+</div>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         const filterButton = document.getElementById('filterButton');
@@ -127,6 +133,21 @@
         filterButtonClose.addEventListener('click', function () {
             this.classList.toggle('active');
             filterFrame.classList.toggle('active');
+        });
+        document.getElementById('filterForm').addEventListener('submit', function (event) {
+            event.preventDefault();
+
+            const formData = new FormData(this);
+            const params = new URLSearchParams(formData).toString();
+            fetch(`/Topic/Post/PostListPartial?${params}`, {
+                method: 'GET'
+            })
+                .then(response => response.text())
+                .then(html => {
+                    document.getElementById('postsContainer').innerHTML = html;
+                    filterFrame.classList.remove('active');
+                })
+                .catch(error => console.error('Error:', error));
         });
     });
 </script>
