--- a/K_Bridge/Pages/Admin/Manager/Edit.cshtml
+++ b/K_Bridge/Pages/Admin/Manager/Edit.cshtml
@@ -1,4 +1,85 @@
 ﻿@page
 @model K_Bridge.Pages.Admin.Manager.EditModel
 @{
+    ViewData["Title"] = "Sửa tài khoản quản trị";
 }
+
+<div class="row account-navigate mt-3 px-5 align-items-center ">
+    <div class="col-12 d-flex justify-content-star">
+        <img src="/img/icon_dashboard_50_dark.png"
+             onclick="window.location.href='/Admin/Dashboard'"
+             class="account-navigate-icon mt-2 custom-cursor-pointer" alt="Tổng quan">
+        <img src="/img/icon_arrow_right_50_dark.png" class="mx-4 mt-2"
+             alt="Tổng quan" width="10" height="20">
+        <div class="account-navigate-text custom-cursor-pointer"
+             onclick="window.location.href='/Admin/Accounts'">
+            Tài khoản
+        </div>
+        <img src="/img/icon_arrow_right_50_dark.png" class="mx-4 mt-2"
+             alt="Arrow" width="10" height="20">
+        <div class="account-navigate-text custom-cursor-pointer"
+             onclick="window.location.href='/Admin/Manager/Edit'">
+            Sửa tài khoản quản trị
+        </div>
+    </div>
+</div>
+<div class="row mt-3 create-padding-form">
+    <div class="col-4">
+        <div class="account-title">Sửa tài khoản quản trị</div>
+        <div class="account-subtitle">Chỉnh sửa thông tin tài khoản</div>
+    </div>
+</div>
+<form method="post" enctype="multipart/form-data">
+    <div class="row mt-4 create-padding-form">
+        <div class="col-5">
+            <div class="form-group mb-3">
+                <label class="create-form-title" for="Code">Mã tài khoản</label>
+                <input type="text" class="form-id" id="Code" name="Code" value="AD2389" readonly>
+            </div>
+            <div class="form-group mb-3">
+                <label class="create-form-title" for="UsernameAdmin">Tên đăng nhập</label>
+                <input type="text" class="form-custom" id="UsernameAdmin" name="UsernameAdmin" value="Admin22" required>
+            </div>
+            <div class="form-group mb-3">
+                <label class="create-form-title" for="Email">Email</label>
+                <input type="email" class="form-custom" id="Email" name="Email" value="admin22@gmail.com" required>
+            </div>
+        </div>
+        <div class="col-2">
+        </div>
+
+        <div class="col-5">
+            <div class="form-group mb-3">
+                <label class="create-form-title" for="OnlineAdmin">Trực tuyến</label>
+                <input type="tel" class="form-custom" id="OnlineAdmin" name="OnlineAdmin" value="20/07/2024" readonly>
+            </div>
+            <div class="form-group mb-3">
+                <label class="create-form-title" for="Password">Mật khẩu</label>
+                <input type="password" class="form-custom" id="Password" name="Password" placeholder="Phải bao gồm 8 ký tự">
+            </div>
+            <div class="form-group mb-3">
+                <label class="create-form-title" for="ProfilePicture">Ảnh đại diện</label>
+                <input type="file" class="form-custom" id="ProfilePicture" name="ProfilePicture" accept="image/*">
+            </div>
+        </div>
+
+    </div>
+    <div class="row mt-5 create-padding-form">
+        <div class="col-2">
+            <button class="w-75 h-100 d-flex justify-content-center align-items-center create-back-btn py-1" onclick="window.location.href='/Admin/Accounts'">
+                Quay về
+            </button>
+        </div>
+        <div class="col-5"></div>
+
+        <div class="col-2 d-flex justify-content-end">
+            <button class="w-75 h-100 d-flex justify-content-center align-items-center create-reset-btn py-1">
+                Đặt lại
+            </button>
+        </div>
+
+        <div class="col-3 d-flex justify-content-end">
+            <button type="submit" class="w-75 h-100 d-flex justify-content-center align-items-center create-btn py-1">Cập nhật tài khoản</button>
+        </div>
+    </div>
+</form>
