--- a/K_Bridge/Pages/Admin/Manager/List.cshtml
+++ b/K_Bridge/Pages/Admin/Manager/List.cshtml
@@ -52,7 +52,7 @@
                     <td>Đang hoạt động</td>
                     <td>
                         <div>
-                            <button class="account-table-edit-btn" onclick="window.location.href='/Admin/Accounts/Edit'">
+                            <button class="account-table-edit-btn" onclick="window.location.href='/Admin/Manager/Edit'">
                                 <img src="/img/icon_edit_50.png" alt="Chỉnh sửa" width="20" height="20">
                             </button>
                             <button class="account-table-delete-btn"
