--- a/K_Bridge/Views/Shared/Components/LayoutHeader/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/LayoutHeader/Default.cshtml
@@ -40,12 +40,12 @@
                     <button class="p-2 bg-main-color-logo border-main-color-layout rounded-3" id="notificationButton">
                         <img src="~/img/notification50.png" class="img-fluid" alt="Notifications" width="25" height="25">
                     </button>
-                    <div class="position-absolute fs-12 translate-middle badge rounded-circle bg-danger" 
-                    id="notificationCount" style="left:40px;">
+                    <div class="position-absolute fs-12 translate-middle badge rounded-circle bg-danger"
+                         id="notificationCount" style="left:40px;">
                         @unreadCount
                     </div>
-                    <div id="notificationList" class="dropdown-menu dropdown-menu-end p-0 " 
-                    style="display: none; width: 300px; max-height: 400px; overflow-y: auto; background-color:#FDE7D2; cursor: pointer;">
+                    <div id="notificationList" class="dropdown-menu dropdown-menu-end p-0 "
+                         style="display: none; width: 300px; max-height: 400px; overflow-y: auto; background-color:#FDE7D2; cursor: pointer;">
                         <div class="p-2 border-bottom">
                             <h6 class="mb-0">Thông báo</h6>
                         </div>
@@ -63,7 +63,14 @@
                     </div>
                 </div>
                 <div class="d-md-flex align-items-center mx-3 pointer-event" onclick="window.location.href='/UserProfile?id=@ViewBag.UserID'">
-                    <img src="/img/avatar_default.png" alt="avatar" class="me-2 rounded-3" style="width: 40px; height: 40px;" />
+                    @if (ViewBag.CurrentUser.Avatar != null)
+                    {
+                        <img src="~/avatars/@ViewBag.CurrentUser.Avatar" alt="avatar" class="me-2 rounded-3" style="width: 40px; height: 40px;" />
+                    }
+                    else
+                    {
+                        <img src="/img/avatar_default.png" alt="avatar" class="me-2 rounded-3" style="width: 40px; height: 40px;" />
+                    }
                     <div class=" text-color-background mb-1 fw-bold flex-grow-1 pe-none">@ViewBag.UsernameLoggedIn</div>
                 </div>
             }
@@ -199,8 +206,10 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center bg-main-color-layout pb-4 rounded-bottom">
-                <button type="button" class="rounded-2 px-3 py-1 btn-confirm me-1" 
-                data-bs-dismiss="modal" style="min-width:148px;">Đóng</button>
+                <button type="button" class="rounded-2 px-3 py-1 btn-confirm me-1"
+                        data-bs-dismiss="modal" style="min-width:148px;">
+                    Đóng
+                </button>
             </div>
         </div>
     </div>
