--- a/K_Bridge/Views/User/EditProfile.cshtml
+++ b/K_Bridge/Views/User/EditProfile.cshtml
@@ -1,65 +1,99 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model UpdateUserProfileViewModel
 @{
     ViewData["Title"] = "Chỉnh sửa hồ sơ";
+    var currentUser = ViewBag.CurrentUser;
 }
 <div>
-    <p class="text-color-logo fw-bold fs-5">Hồ sơ test1</p>
+    <p class="text-color-logo fw-bold fs-5">Hồ sơ của @currentUser.Username</p>
     <p class="text-color-header fs-12" style="line-height: 2.0;">
         Tại đây, bạn có thể dễ dàng thay đổi ảnh đại diện, ảnh bìa hoặc tên hiển thị của mình, giúp hồ sơ của bạn trở nên cá nhân hơn và phản ánh đúng về chính bạn. Hãy tùy chỉnh giao diện của trang cá nhân ngay bây giờ để thể hiện phong cách và sở thích của mình!
     </p>
 </div>
-<div class="d-flex">
-    <div class="col-lg-6">
-        <div style="width: 90%;">
-            @*             <div class="mt-2 text-color-header fw-bold text-uppercase fs-12">tên hiển thị</div>
-            <input type="text" style="width:90%;" class="my-2 flex-grow-1 px-3 py-1 fs-6 text-color-logo rounded-8 focus bg-main-color-btn"
-            placeholder="Tên hiển thị..." value="test1">
-            *@
-            <div class="mt-2 text-color-header fw-bold text-uppercase fs-12">ảnh đại điện</div>
-            <label for="avatar-upload" style="width:90%; cursor:pointer;" class=" my-2  btn-account-log px-3 py-1 rounded-3">
-                <i class="bi bi-upload mx-3"></i> Chọn ảnh mới
-            </label>
-            <input type="file" id="avatar-upload" class="d-none" accept="image/*">
-
-            <div for="exampleColorInput" class="mt-2 text-color-header fw-bold text-uppercase fs-12">ảnh bìa</div>
-            <input type="color" class="my-2 form-control form-control-color" id="exampleColorInput" value="#8E6745" title="Choose your color">
-        </div>
-    </div>
-    <div class="col-lg-6">
-        <div class="text-color-header fw-bold text-uppercase fs-12">Giới thiệu về tôi</div>
-        <textarea style="min-height:100%; min-width:98%;"
-                  class="my-2 m-2 p-3 fs-6 text-color-logo rounded-8 focus bg-main-color-btn" id="content-textarea" placeholder="Viết nội dung của bài viết tại đây...">Đây là nội dung giới thiệu tài khoản Đây là nội dung giới thiệu tài khoản Đây là nội dung giới thiệu tài khoản</textarea>
-    </div>
-</div>
-<div>
-    <div class="mt-4 text-color-header fw-bold text-uppercase fs-12">xem trước</div>
-    <div class="my-2">
-        <div class="bg-main-color-layout rounded-8" style="min-height: 280px;">
-            <div id="target-div" class="rounded-3 rounded-top" style="height: 100px; background-color: #8E6745;"></div>
-            <div class="d-flex position-relative">
-                <div class="col-lg-3">
-                    <img width="100" height="100"
-                         src="~/img/user.jpg" id="avatar-preview" class="img-fluid rounded-3 position-absolute"
-                         style="border-width: 10px; border-color: #FFBE98; top:-40px; left:45px; object-fit: cover;"
-                         alt="Avatar">
-                </div>
-                <div class="mt-3">
-                    <p class="fs-5 text-color-logo">test1</p>
-                </div>
-            </div>
-            <div class="px-4 py-2">
-                <p id="content-display"></p>
-            </div>
-        </div>
-    </div>
+<form id="profile-form" enctype="multipart/form-data">
     <div class="d-flex">
-        <button id="save-btn" class="mt-3 btn btn-edit-profile d-none">Lưu thay đổi</button>
-        <button id="reset-btn" class="mt-3 btn d-none">Đặt lại</button>
-    </div>
+        <div class="col-lg-6">
+            <div style="width: 90%;">
+                @*             <div class="mt-2 text-color-header fw-bold text-uppercase fs-12">tên hiển thị</div>
+                <input type="text" style="width:90%;" class="my-2 flex-grow-1 px-3 py-1 fs-6 text-color-logo rounded-8 focus bg-main-color-btn"
+                placeholder="Tên hiển thị..." value="test1">
+                *@
+                <div class="mt-2 text-color-header fw-bold text-uppercase fs-12">ảnh đại điện</div>
+                <label for="avatar-upload" style="width:90%; cursor:pointer;" class=" my-2  btn-account-log px-3 py-1 rounded-3">
+                    <i class="bi bi-upload mx-3"></i> Chọn ảnh mới
+                </label>
+                <input type="file" id="avatar-upload" asp-for="AvatarFile" class="d-none" accept="image/*">
 
+                <div for="exampleColorInput" class="mt-2 text-color-header fw-bold text-uppercase fs-12">ảnh bìa</div>
+
+                <input type="color" class="my-2 form-control form-control-color" asp-for="ProfileColor"
+                       id="exampleColorInput" value="#8E6745" title="Choose your color">
+
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <div class="text-color-header fw-bold text-uppercase fs-12">Giới thiệu về tôi</div>
+            <textarea style="min-height:100%; min-width:98%;" name="NewBiography"
+                      class="my-2 m-2 p-3 fs-6 text-color-logo rounded-8 focus bg-main-color-btn" id="content-textarea"
+                      placeholder="Viết nội dung của bài viết tại đây...">@currentUser.Biography</textarea>
+
+            <input asp-for="Biography" style="display:none" />
+        </div>
+    </div>
+    <div>
+        <div class="mt-4 text-color-header fw-bold text-uppercase fs-12">xem trước</div>
+        <div class="my-2">
+            <div class="bg-main-color-layout rounded-8" style="min-height: 280px;">
+                @if (currentUser.ProfileColor != null)
+                {
+                    <div id="target-div" class="rounded-3 rounded-top" style="height: 100px; background-color: @currentUser.ProfileColor;"></div>
+                }
+                else
+                {
+                    <div id="target-div" class="rounded-3 rounded-top" style="height: 100px; background-color: #8E6745;"></div>
+                }
+                <div class="d-flex position-relative">
+                    <div class="col-lg-3">
+                        @if (currentUser.Avatar == null)
+                        {
+                            <img width="100" height="100"
+                                 src="~/img/avatar_default.png" id="avatar-preview" class="img-fluid rounded-3 position-absolute"
+                                 style="border-width: 10px; border-color: #FFBE98; top:-40px; left:45px; object-fit: cover;"
+                                 alt="Avatar">
+                        }
+                        else
+                        {
+                            <img width="100" height="100"
+                                 src="~/avatars/@currentUser.Avatar" id="avatar-preview" class="img-fluid rounded-3 position-absolute"
+                                 style="border-width: 10px; border-color: #FFBE98; top:-40px; left:45px; object-fit: cover;"
+                                 alt="Avatar">
+                        }
+                    </div>
+                    <div class="mt-3">
+                        <p class="fs-5 text-color-logo">@currentUser.Username</p>
+                    </div>
+                </div>
+                <div class="px-4 py-2">
+                    <p id="content-display"></p>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex">
+            <button id="save-btn" type="submit" class="mt-3 btn btn-edit-profile d-none">Lưu thay đổi</button>
+            <button id="reset-btn" type="reset" class="mt-3 btn d-none">Đặt lại</button>
+        </div>
+
+    </div>
+</form>
+
+<div class="position-fixed top-0 end-0 p-3" style="z-index: 11">
+    <div id="liveToastUserProfile" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-body text-color-background fw-bold text-center rounded-bottom rounded-3"
+             style="background-color: #493422; border: 2px solid #FFF0E6;">
+            <div id="userProfileSummary"></div>
+        </div>
+    </div>
 </div>
+
 <script>
     document.getElementById('avatar-upload').addEventListener('change', function (e) {
         var file = e.target.files[0];
@@ -89,7 +123,11 @@
 
     // Hàm cập nhật nội dung của thẻ <p>
     function updateContentDisplay() {
-        contentDisplay.textContent = contentTextarea.value;
+        if (contentTextarea.value.trim() === '') {
+            contentDisplay.textContent = 'Đây là giới thiệu của bạn!';
+        } else {
+            contentDisplay.textContent = contentTextarea.value;
+        }
     }
 
     // Thêm event listener để lắng nghe sự kiện thay đổi nội dung của <textarea>
@@ -111,13 +149,49 @@
     });
 
     saveBtn.addEventListener('click', () => {
-        // Thực hiện các hành động lưu ở đây
-        console.log('Đã lưu nội dung mới:', contentTextarea.value);
         originalContent = contentTextarea.value;
         saveBtn.classList.add('d-none');
     });
     resetBtn.addEventListener('click', () => {
         contentTextarea.value = originalContent;
         resetBtn.classList.add('d-none');
+    });
+</script>
+
+<!--Scrip submit update-->
+<script>
+    document.getElementById('profile-form').addEventListener('submit', function (e) {
+        e.preventDefault();
+        var formData = new FormData(this);
+
+        var responseSummary = document.getElementById('userProfileSummary');
+        responseSummary.innerHTML = ''; // Xóa nội dung cũ
+
+        fetch('/UserProfile/EditProfile', {
+            method: 'POST',
+            body: formData
+        })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    responseSummary.innerHTML = '<div>Cập nhật thành công</div>';
+                    responseSummary.style.display = 'block';
+                    showToast('liveToastUserProfile');
+                    setTimeout(() => {
+                        window.location.href = '/UserProfile?id=' + data.userId;
+                    }, 2000);
+                } else {
+                    if (data.messages != null) {
+                        responseSummary.innerHTML = `<div>${data.messages}</div>`;
+                        responseSummary.style.display = 'block';
+                        showToast('liveToastDeliveToastUserProfiletail');
+                    } else {
+                        responseSummary.innerHTML = '<div>Có lỗi xảy ra trong quá trình xử lý</div>';
+                        responseSummary.style.display = 'block';
+                        showToast('liveToastUserProfile');
+                    }
+                }
+            })
+            .catch(error => console.error('Lỗi:', error));
     });
 </script>
