--- a/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
+++ b/K_Bridge/Views/Shared/Components/AdminNavigationMenu/Default.cshtml
@@ -42,7 +42,7 @@
         </a>
     </li> *@
     <li class="nav-item mt-2">
-        <a class="nav-link nav-link-text" href="/Admin/Manager/List">
+        <a class="nav-link nav-link-text" href="#">
             <img src="~/img/icon_vote_50.png" class="sidebar-icon" /> Bình chọn
         </a>
     </li>
